# codereview

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  eval_log.json  eval_summary.json  inference.py  models.py  openenv.yaml  project.md  pyproject.toml  requirements.txt  test_env.py  test_env_out.txt  test_grader.py  test_output.txt  test_variants.py  verify_submission.py
server/: Dockerfile  app.py  environment.py
