[project]
name = "code-review-env"
version = "1.0.0"
description = "An OpenEnv-compliant environment for evaluating AI code review agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Code Review Team", email = "support@openenv.ai" }
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "openai>=1.12.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"